--- a/introQTL.tex
+++ b/introQTL.tex
@@ -127,6 +127,20 @@ The figure on the right is from David Deen.
 \end{frame}
 
 
+\begin{frame}[c]{Genotype \& phenotype data}
+
+\figw{Figs/data_fig.png}{1.0}
+
+\note{
+  The data consist of genotypes at a set of markers across the genome,
+  plus some quantitative phenotype for each mouse. The goal is to
+  identify regions of the genome where the genotype is associated with
+  the phenotype.
+}
+\end{frame}
+
+
+
 \begin{frame}[c]{QTL mapping}
 
 \vspace{5mm}
@@ -174,7 +188,7 @@ other genes.
 \end{frame}
 
 
-\begin{frame}[c]{B6 $\times$ BTBR, \emph{Lep}$^{\text{\emph{ob}/\emph{ob}}}$}
+\begin{frame}[c]{eQTL analysis}
 \figh{Figs/plot-eqtl-islet.pdf}{0.9}
 
 \note{
@@ -200,7 +214,7 @@ other genes.
 
 
 
-\begin{frame}[c]{B6 $\times$ BTBR, \emph{Lep}$^{\text{\emph{ob}/\emph{ob}}}$}
+\begin{frame}[c]{Multiple tissues}
 \figw{Figs/plot-eqtl.pdf}{1.1}
 
 \note{
