Add slides with links to interactive graphs

--- a/introQTL.tex
+++ b/introQTL.tex
@@ -168,6 +168,24 @@ The figure on the right is from David Deen.
 \end{frame}
 
 
+\begin{frame}[c]{\href{https://www.biostat.wisc.edu/~kbroman/D3/lod_and_effect}{\color{title}
+      Interactive graph}}
+
+  \figh{Figs/lod_interactive.png}{0.85}
+
+  \note{
+    I've become convinced of the importance of interactive data
+    visualizations: basically all data visualizations are improved
+    with some amount of interactivity. This enables a more thorough
+    exploration of results, which is particularly important and
+    valuable for high-dimensional data.
+
+  Click on the slide title to jump to the interactive version:
+  \href{http://bit.ly/D3lod}{\tt http://bit.ly/D3lod}
+ }
+\end{frame}
+
+
 \begin{frame}[c]{}
 
 \figh{Figs/mouse_on_chips.png}{1.0}
@@ -232,6 +250,20 @@ other genes.
 
 \end{frame}
 
+
+\begin{frame}[c]{\href{https://www.biostat.wisc.edu/~kbroman/D3/cistrans}{\color{title}
+      Interactive eQTL plot}}
+
+  \figh{Figs/cistrans_interactive.png}{0.9}
+
+  \note{
+    An interactive version of the eQTL plot allows you to get to the
+    underlying detailed results.
+
+  Click on the slide title to jump to the interactive version:
+  \href{http://bit.ly/D3cistrans}{\tt http://bit.ly/D3cistrans}
+  }
+\end{frame}
 
 
 
