Add summary slide

--- a/introQTL.tex
+++ b/introQTL.tex
@@ -266,6 +266,20 @@ other genes.
 \end{frame}
 
 
+\begin{frame}[c]{Summary}
+
+  \begin{itemize}
+    \item Identify genes underlying complex diseases in mice
+    \item Multiple loci contributing to one trait
+    \item Genome-scale phenotypes, such as gene expression
+    \item More complex crosses, such as with >2 strains
+    \item Data analysis, statistical methods, software, interactive graphs
+  \end{itemize}
+
+  \note{
+    It's always good to have a summary slide.
+  }
+\end{frame}
 
 \begin{frame}[c]{}
 
