Add AIL and HS figures

--- a/introQTL.tex
+++ b/introQTL.tex
@@ -266,6 +266,39 @@ other genes.
 \end{frame}
 
 
+\begin{frame}[c]{Advanced intercross lines}
+
+  \figh{Figs/ail.pdf}{0.9}
+
+  \note{
+    One strategy for dealing with the low-resolution mapping of QTL is
+    to perform multiple generations of intercrossing, to break up the
+    chromosomes into small chunks.
+  }
+\end{frame}
+
+
+\begin{frame}[c]{Heterogeneous stock}
+
+  \figh{Figs/hs.pdf}{0.9}
+
+  \note{
+    The cost (in time and money) to create advanced intercross lines
+    is generally prohibitive for a single lab. But for multiple labs
+    to collaborate on this sort of effort, they'll want to ensure that
+    the strains involved are relevant to their traits of interest.
+
+    Heterogeneous stock is an advanced intercross derived from
+    multiple (say 8) founder strains.
+
+    Analysis issues include the reconstruction of the haplotypes along
+    each chromosome in each individual, the treatment of the multiple
+    genotypes at a single locus, and the need to account for
+    population strcture.
+  }
+\end{frame}
+
+
 \begin{frame}[c]{Summary}
 
   \begin{itemize}
