More space between bullets in summary slide

--- a/introQTL.tex
+++ b/introQTL.tex
@@ -302,6 +302,7 @@ other genes.
 \begin{frame}[c]{Summary}
 
   \begin{itemize}
+   \itemsep12pt
     \item Identify genes underlying complex diseases in mice
     \item Multiple loci contributing to one trait
     \item Genome-scale phenotypes, such as gene expression
