Revise summary slide

--- a/introQTL.tex
+++ b/introQTL.tex
@@ -303,11 +303,16 @@ other genes.
 
   \begin{itemize}
    \itemsep12pt
-    \item Identify genes underlying complex diseases in mice
-    \item Multiple loci contributing to one trait
-    \item Genome-scale phenotypes, such as gene expression
-    \item More complex crosses, such as with >2 strains
-    \item Data analysis, statistical methods, software, interactive graphs
+    \item Gene mapping in mice is fun and useful
+    \item Lots of open questions:
+      \begin{itemize}
+      \item Multiple loci contributing to one trait
+      \item Joint consideration of many traits
+      \item Treatment of complex crosses with >2 strains
+      \item Prioritizing candidate genes
+      \end{itemize}
+    \item Practicality $>$ optimality
+    \item Data analysis, statistical methods, software, data visualization
   \end{itemize}
 
   \note{
